# dlbird-experiments

./: .gitignore  FINAL_RESULTS.md  FIXES_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INDEX_VALIDATION.md  NOTEBOOK_TRANSFORMATION_SUMMARY.md  QUICKSTART.md  README.md  README_VALIDATION.md  STATUS.md  VALIDATION_COMPLETE.md  VALIDATION_SUMMARY_EXECUTIVE.md  WHERE_TO_FIND_THINGS.md  main.py  pyproject.toml  test_implementation.py  test_normalization.py  test_phase1_implementation.py  verify_datasets.py
.github/agents/: copilot-instructions.md
.specify/: SPECKIT_IMPLEMENTATION_COMPLETE.md
.specify/memory/: constitution.md  tasks.md  technical_plan.md
.specify/specs/: README.md  REORGANIZATION_SUMMARY.md
artifacts/: dataset_summary.json  env.json  intersection_metadata.json  intersection_validation.csv
notebooks/: 00_env_setup.ipynb  01_intersection.ipynb  02_audio_features.ipynb  03_image_models.ipynb  04_training_compare.ipynb  05_evaluate.ipynb  05_results_paper.ipynb
paper/: bird_classification_paper.md  example_paper.bib  example_paper.tex  icml2025_bird_classification.tex  references.bib
scripts/: 01_run_indexing.py  02_splits_and_features.py  03_train_audio.py  04_train_image.py  05_evaluate.py  06_generate_paper.py  07_generate_markdown_paper.py  evaluate_ast.py  generate_lms_cache.py  generate_paper_plots.py  run_all_validations.py  validate_class_balance.py  validate_data.py  validate_features.py
src/: __init__.py
tests/: test_focal_loss.py  test_implementation.py  test_log_mel_spectrogram.py  test_normalization.py  test_phase1_implementation.py
(+96 files in other folders)
