[project]
name = "speckitdlbird"
version = "0.1.0"
description = "Bird species classification using images and audio with CNNs and ViTs"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "librosa>=0.11.0",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "rich>=14.2.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "timm>=1.0.22",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchvision>=0.24.1",
    "transformers>=4.57.3",
]
